--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@sveltestack/svelte-query": "^1.0.1",
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.4.0",
     "svelte": "^3.24.0"
   },
   "devDependencies": {
